# Sunstone

./: CMakeLists.txt  README.md  Sunstone.sln  Sunstone.vcxproj  Sunstone.vcxproj.filters  board.cpp  board.h  constants.h  engine.cpp  log.txt  transpositionTable.cpp  transpositionTable.h  ttErrorNeedsDebuging.txt
src/: bitboard.h  board.cpp  board.h  constants.h  engine.cpp  engine.h  main.cpp  search.cpp  search.h  transpositionTable.cpp  transpositionTable.h
x64/Debug/: Sunstone.exe.recipe  Sunstone.ilk  Sunstone.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Sunstone.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Sunstone.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: Sunstone.exe.recipe  Sunstone.iobj  Sunstone.ipdb  Sunstone.vcxproj.FileListAbsolute.txt
x64/Release/Sunstone.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Sunstone.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
